[package]
name = "pallet-prover"
version = "0.1.0"
edition = "2021"
license = "MIT-0"

[dependencies]
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

test-utils = { path = "../test-utils", default-features = false, optional = true }
num-bigint = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/num-bigint-sgx" }

[dev-dependencies]
test-utils = { path = "../test-utils" }
env_logger = "0.9.0"

[features]
default = ["std"]
std = [
	"codec/std",
	'log/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-arithmetic/std',
	"sp-core/std",
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks","test-utils"]
try-runtime = ["frame-support/try-runtime"]
